tests/rosetta/out/Rust/100-doors.error
rustc error: exit status 1
error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGolden100-doors215257139/001/prog.rs:24:17
   |
24 |                 line += "1";
   |                 ----^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGolden100-doors215257139/001/prog.rs:26:17
   |
26 |                 line += "0";
   |                 ----^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error[E0368]: binary assignment operation `+=` cannot be applied to type `&str`
  --> /tmp/TestMochiRustGolden100-doors215257139/001/prog.rs:29:17
   |
29 |                 line += " ";
   |                 ----^^^^^^^
   |                 |
   |                 cannot use `+=` on type `&str`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0368`.
