tests/rosetta/out/Rust/100-doors.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:36:31Z
fn append<T: Clone>(mut v: Vec<T>, item: T) -> Vec<T> {
    v.push(item);
    v
}

fn main() {
    let mut doors = vec![];
    for i in 0..100 {
        doors = append(doors, false);
    }
    for pass in 1..101 {
        let mut idx = pass - 1;
        while idx < 100 {
            doors[idx as usize] = !doors[idx as usize];
            idx += pass;
        }
    }
    for row in 0..10 {
        let mut line = "";
        for col in 0..10 {
            let idx = row * 10 + col;
            if doors[idx as usize] != Default::default() {
                line += "1";
            } else {
                line += "0";
            }
            if col < 9 {
                line += " ";
            }
        }
        println!("{}", line);
    }
}
